# amplifier-module-hooks-dynamic-context

./: .gitignore  README.md  pyproject.toml
amplifier_module_hooks_dynamic_context/: __init__.py  tool.py
tests/: conftest.py  test_classifier.py  test_hook.py  test_manifest.py  test_mount.py  test_tool.py
