[project]
name = "amplifier-module-hooks-dynamic-context"
version = "0.1.0"
description = "Dynamic context loading hook — injects capability context on demand based on keyword classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.entry-points."amplifier.modules"]
hooks-dynamic-context = "amplifier_module_hooks_dynamic_context:mount"
tool-load-context = "amplifier_module_hooks_dynamic_context.tool:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
